--- a/resume_jp.tex
+++ b/resume_jp.tex
@@ -52,23 +52,23 @@
 \dates{2018年1月 ～ 現在}
 \begin{position}
 セルフサービス環境のフロントエンドポータルに務めていた。
-本来、Reactコンポネントのみとして開発されたものであったが、
-たくさんのライブラリーを導入して、よりいい構築やテストができた。
-使用したライブラリは、redux、react-final-form、ramda、normalizr,
-reselect、re-reselect、mocha、chai、sinon、postcss、等だ。\\
+当初はReactコンポーネントのみとして開発されたものであったが、
+多数のライブラリーを導入し、より良い構築やテストにつなげることができた。
+使用したライブラリは以下の通りである: redux、react-final-form、ramda、normalizr,
+reselect、re-reselect、mocha、chai、sinon、postcss、等。\\
 
  \begin{itemize} \itemsep -2pt % reduce space between items
-   \item Reduxを利用して、アプリケーションのGlobal Stateを管理した。
-ミドルウェアを使って、APIから情報を読み取り、Local Storageでデータ
-を保存する、等の副作用を成り立たせた。reselectとre-reselectでセレクター
+   \item Reduxを利用し、アプリケーションのGlobal Stateを管理した。
+ミドルウェアを使って、APIからの情報読み取り、Local Storageでのデータ
+を保存等の副作用処理を分離させた。reselectとre-reselectでセレクター
 を書いた。
-  \item eslintとairbnbのルールでコードのlintingができた。
-  \item mocha、chai、sinon、enzymeに基づいたテストを構築
-  \item react-final-formを導入して、フォームのstateを管理
+  \item eslintとairbnbルールでコードのlintingを実施した。
+  \item mocha、chai、sinon、enzymeに基づいたテストを構築した。
+  \item react-final-formを導入して、フォームのstateを管理した。
   \item PostCSSをwebpackで実行することで、ポータルのCSSのビルド
-ができた。BootstrapやFont Awesome、CSSライブラリーの管理がより
-簡単にできた。
-  \item webpackとimageminで画像の圧縮ができた。
+することができた。BootstrapやFont Awesome、CSSライブラリーの管理がより
+簡単に行うことができた。
+  \item webpackとimageminで画像の圧縮がすることができた。
  \end{itemize}
 \end{position}
 
@@ -77,19 +77,18 @@ reselect、re-reselect、mocha、chai、sinon、postcss、等だ。\\
 \location{}
 \dates{2015年6月 ～ 2017年12月}
 \begin{position}
-入社して、新卒トレーニングが終わったらすぐ、サーバープラットフォームチーム
-に割り当てられた。様々なストレージソリュション（Pure Storage, Nimble Storage等）や、
-OpenStack環境、NuageのSDN環境の管理を務めていたのだ。
-できたタスクは：\\
+新卒研修後、サーバープラットフォームチームに配属された。様々なストレージソリューション（Pure Storage, Nimble Storage等）や、
+OpenStack環境、NuageのSDN環境の管理を務めた。
+担当したタスクは：\\
 
 \begin{itemize} \itemsep -2pt % reduce space between items
   \item Fluentd、InfluxDB、Grafana、SNMP、ParamikoやPythonのスクリプトで
 ストレージソリューションのレーテンシーやIOPS、テレメトリデータのダッシュボード
-を構築。
+を構築した。
   \item PythonスクリプトでSDNのオペレーションの自動化。バックアップやVMware Clusterの
-資源の配分、常に行うオペレーションはより簡単と正確になった。VMwareをpyVmomiで操作した。
-  \item OpenStack環境でsysctl変数はリブート後に消えた問題を解決。Ansibleのplaybook
-を適当に編集して、必要なノードに変更を施した。
+資源の配分、定常オペレーションはより簡単かつ正確になった。VMwareをpyVmomiで操作した。
+  \item OpenStack環境でsysctl変数がリブート後に消える問題を解決。Ansibleのplaybook
+を適切に編集して、必要なノードに変更を施した。
   \item OpenStack環境のVMをテナント交換した。MySQLレコードを手動で変更するやりかたを
 調べ、テスト環境で試した。マニュアルを書いて、オペレーションを無事に実行した。
 \end{itemize}
@@ -109,35 +108,35 @@ OpenStack環境、NuageのSDN環境の管理を務めていたのだ。
 \vspace{8pt} 
 
 JavaScriptやNode.jsを中心に、オープンソースソフトウェアに
-コントリビューションをやってきた。GitHubで公開的に見れる。
+貢献してきた。それぞれの内容はGitHubで公開されている。
 
 \subsubsection{プルリクエスト}
 
 \begin{itemize}
   \item \url{https://github.com/socketio/socket.io/pull/2745} \\
   バージョン1.5.0でquery stringがちゃんと伝わらなかったバッグ解除のPR。
-  ES5のObject.assignを使って、ちゃんと伝えた。対応中の旧IEでは、polyfill
-  を使うのが、ポイントだ。
+  ES5のObject.assignを使って、正しく伝わるように修正した。対応中の旧IEでは、polyfill
+  を使うのが、ポイントである。
 
   \item \url{https://github.com/socketio/engine.io/pull/444} \\
   バージョン1.5.1のバッグ解除のPR。回帰テストを追加。
 
   \item \url{https://github.com/agentk/fontfacegen/pull/26} \\
   FontForgeというソフトウェアを使って、ウェブ用のフォントを出力するモジュール。
-  出力されるフォントの文字選択機能を追加するPR。日本語みたい、フォントのサイズは
-  数MBにもなりうる場合、利用する文字だけを選択すれば、サイズを抑えるのに便利。
+  出力されるフォントの文字選択機能を追加するPR。日本語などでフォントファイルのサイズが
+  数MBにもなる場合、利用する文字だけを選択すれば、サイズを抑えるのに便利。
 
   \item \url{https://github.com/libxmljs/libxmljs/pull/521} \\
-  XMLのprocessing instructionsが対応される、機能追加のPR。
+  XML processing instructionsに対応する、機能追加のPR。
   svgファイルにスタイルシートを追加するのに便利。
-  libxmljsは裏にC言語のlibxml2に主な機能を任せているので、PRの内容の
-  殆どはC++のコードで書かれている。Node.JSのJavaScriptエンジンのV8の
-  働き方のこと、わかるようになることが多かった。
+  libxmljsは裏でC言語のlibxml2に主な機能を任せているので、PRの内容の
+  殆どはC++のコードで書かれている。Node.JSのV8JavaScriptエンジンの
+  働き方がよく分かるようになった。
 
   \item \url{https://github.com/final-form/react-final-form/pull/266} \\
-  Observer パターンに基づいた、Form Stateを管理するReactコンポネント。
-  Lookaheadコンポネントをreact-final-formとreduxで使う例を追加したPRのだ。
-  final-formの様々な機能が実例される。
+  Observer パターンに基づいた、Form Stateを管理するReactコンポーネント。
+  Lookaheadコンポーネントをreact-final-formとreduxで使う例を追加したPRのだ。
+  final-formの様々な機能の実例が提示される。
 
   \item \url{https://github.com/jasonpincin/stream-to-string/pull/1} \\
   Nodeのストリームを文字列に変換するモジュール。
@@ -146,7 +145,7 @@ JavaScriptやNode.jsを中心に、オープンソースソフトウェアに
   PRの内容は、自分のNPMモジュール、vinyl-to-stringで利用した。
 
   \item \url{https://github.com/izolate/html2pug/pull/2} \\
-  常にExpressアプリケーションで使われるPugを、HTMLから変換するモジュール。
+  Expressアプリケーションで頻繁に使用されるPugを、HTMLから変換するモジュール。
   このPRの目的は、HTML Parserをjsdomからparse5に変えることで、HTMLのコメント
   やHTML Fragment等、より多くの機能に対応することだった。
 
@@ -158,7 +157,7 @@ JavaScriptやNode.jsを中心に、オープンソースソフトウェアに
   \item \url{https://github.com/JRJurman/rollup-plugin-polyfill/pull/2} \\
   Rollupでビルドするアプリケーションにpolyfillを注入するモジュール。
   このPRでSource Mapsの作成ができるようになった。ビルド時の警告メッセージが
-  消えた。もっとも、CommonJSとESMの2つのフォーマットでモジュールのインポート
+  消えた。さらに、CommonJSとESMの2つのフォーマットでモジュールのインポート
   ができるようになった。
 \end{itemize}
 
@@ -166,33 +165,33 @@ JavaScriptやNode.jsを中心に、オープンソースソフトウェアに
 
 \begin{itemize}
   \item \url{https://www.npmjs.com/package/i18next-conv} \\
-  このモジュールの管理人になれた。gettextのPOファイルをi18nextのJSON
+  継続的な貢献の結果、当モジュールの管理人となることができた。gettextのPOファイルをi18nextのJSON
   フォーマットに変換するモジュール。
-  一週間で5000回以上にダウンロードされる。
+  一週間で5000回以上ダウンロードされている。
 
   \item \url{https://www.npmjs.com/package/i18next-fetch-backend} \\
   普段i18nextで利用されるXHRバックエンドの代わりに利用できる。
   fetchを利用するから、クライアントとサーバー両方が扱うコードの場合
   に特に役立つ。
-  一ヶ月で2000回以上にダウンロードされる。
+  一ヶ月で2000回以上ダウンロードされている。
 
   \item \url{https://www.npmjs.com/package/react-stay-scrolled} \\
   チャットウィンドウに新しいメッセージがある等の時に、スクロールダウンするのに
-  役立つReactコンポネント。
-  GitHubで34の星があり、一ヶ月で1000回以上にダウンロードされる。
+  役立つReactコンポーネント。
+  GitHubで34個の星があり、一ヶ月で1000回以上ダウンロードされている。
 
   \item \url{https://www.npmjs.com/package/vinyl-contents-tostring} \\
   vinylファイル（Gulpが使うバーチャルファイル）のコンテンツを文字列に変換する
-  モジュール。自作のGulpプラグインが利用している。
-  一ヶ月で1000回以上にダウンロードされる。
+  モジュール。自作のGulpプラグインを利用している。
+  一ヶ月で1000回以上ダウンロードされている。
 
   \item \url{https://www.npmjs.com/package/rollup-plugin-i18next-conv} \\
   Rollupでgettextファイルをi18nextのフォーマットでインポートできるモジュール。
-  webviewのアプリケーション等、訳がオフラインでも必要な場合に便利。
+  webviewのアプリケーション等、オフライン利用のために全てのコンテンツをバンドルする必要がある際に便利。
 
   \item \url{https://www.npmjs.com/package/gulp-xml-transformer} \\
   GulpでXML編集モジュール。
-  一ヶ月で1000回以上にダウンロードされる。
+  一ヶ月で1000回以上ダウンロードされている。
 \end{itemize}
 
 \vspace{0.2in} 
